# w-switch

./: Cargo.toml  README.md
src/: main.rs
src/contents/: layout.rs  mod.rs  panel.rs
src/styling/: colors.rs  theme.rs
src/utils/: utils.rs
